Implement endpoints for elastic db
